# react-native-pdfviewer

./: Pdfviewer.podspec  nitro.json  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/pdfviewer/: PdfviewerPackage.java
cpp/: HybridPdfviewer.cpp  HybridPdfviewer.hpp
example/: App.tsx  app.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/pdfviewerexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/PdfviewerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/PdfviewerExample.xcodeproj/: project.pbxproj
example/ios/PdfviewerExample.xcodeproj/xcshareddata/xcschemes/: PdfviewerExample.xcscheme
example/ios/PdfviewerExample.xcworkspace/: contents.xcworkspacedata
ios/: Bridge.h
src/: index.ts
src/specs/: pdfviewer.nitro.ts
